GT NEWS

GT 2.0 has undergone a significant re-architecturing to promote more
flexibility and extensibility.  There have been a number of breaking
changes, primarily dealing with type renaming.

Breaking Changes:

  * As part of reorganizing the code, we've renamed the namespaces
    (GTServer and GTClient -> GT.Net) and introduced a new assembly to
    hold common components (GTBase). 
    <https://papyrus.usask.ca/trac/gt/ticket/7>

      * Change all the uses
	  'using GTServer;'  ->  'using GT.Net;'
	  'using GTClient;'  ->  'using GT.Net;'

      * You will need to add the GTBase project or DLL to your clients.
	<https://papyrus.usask.ca/trac/gt/ticket/13>

  * The TCP and UDP protocols have been separated out and generalized
    from the code into implementations called transports (see ITransport).
    The MessageProtocol enum has disappeared: clients now request 
    a communication protocol by describing the requirements for
    sending a message; GT will use these requirements to find a suitable
    transport.

  * Many classes have been shielded by interfaces, notably the *Stream
    classes provided by GT Client.  The Client.Get*Stream() methods now
    return interfaces (i.e., IStringStream, IBinaryStream, IObjectStream,
    ISessionStream, ITupleStream*).  The Client.GetStreamedTuple*()
    methods now also return interfaces (i.e., IStreamedTuple).

  * GT Server's Server.Client has been renamed to ClientConnexion,
    and similarly GT Client's ServerStream has been renamed to
    ServerConnexion.  These classes have been shielded behind an
    interface IConnexion.  Both classes have undergone cleanup:

      * the Dead property has been flipped to be called Active and
        made read-only;

      * IConnexion now implements IDisposable: any uses of Dead as
        a writable property should be changed to use IDisposable.Dispose().

      * the Send() calls now take both a MessageDeliverRequirements object