@@ -1,5 +1,11 @@
 GT NEWS
 
+GT XXX
+
+  * Clients and Servers now report any errors/warnings/information
+    to the console when there are no registered ErrorEvent handlers.
+
+
 GT 2.0 has undergone a significant re-architecturing to promote more
 flexibility and extensibility.  There have been a number of breaking
 changes, primarily dealing with type renaming.
